--- a/vite-project/server/package.json
+++ b/vite-project/server/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
+  "proxy": "http://localhost:3001",
   "keywords": [],
   "author": "",
   "license": "ISC",
