--- a/vite-project/server/tsconfig.json
+++ b/vite-project/server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "commonjs",
     "moduleResolution": "Node",
     "strict": true,
     "esModuleInterop": true,
+    "rootDir": "src",
     "outDir": "dist"
   },
   "include": ["src"]
