--- a/vite-project/server/tsconfig.json
+++ b/vite-project/server/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "moduleResolution": "Node",
-    "types": ["node", "vitest/globals"],
+    "types": ["node"],
     "strict": true,
     "esModuleInterop": true,
     "rootDir": "src",
