--- a/vite-project/server/package.json
+++ b/vite-project/server/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
@@ -23,10 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
-    "@types/supertest": "^6.0.3",
-    "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.18"
+    "typescript": "^5.9.3"
   }
 }
