--- a/vite-project/tsconfig.node.json
+++ b/vite-project/tsconfig.node.json
@@ -4,7 +4,7 @@
     "target": "ES2023",
     "lib": ["ES2023", "DOM"],
     "module": "ESNext",
-    "types": ["node", "vitest/globals", "@testing-library/jest-dom"],
+    "types": ["node"],
     "skipLibCheck": true,
 
     /* Bundler mode */
